--- a/SystemUI/css/main.css
+++ b/SystemUI/css/main.css
@@ -59,6 +59,7 @@ body {
     background-image: url("../img/TigerLogo.png");
     background-repeat: no-repeat;
     background-size: 100%;
+    margin: auto;
 }
 
 .welcomeMessage {
@@ -67,7 +68,6 @@ body {
     font-size: 30px;
     color: white;
     user-select: none;
-    margin-bottom: 40px;
 }
 
 .button {
@@ -103,7 +103,6 @@ body {
 
 .icon {
     display: block;
-    margin-top: 50px;
     margin-bottom: 20px;
     font-size: 50px;
     color: white;
