--- a/SystemUI/SystemInterface/files.css
+++ b/SystemUI/SystemInterface/files.css
@@ -26,3 +26,46 @@
     margin-top: 20px;
     font-size: 50px;
 }
+.place{
+    transition: 0.5s;
+    height:50px; 
+    line-height: 3.5;
+    padding-left: 20px;
+}
+.place:hover{
+    background-color: rgba(0, 0, 0, 0.103)
+}
+.placesIcons{
+    vertical-align: text-top;
+    padding-right: 5px;
+}
+.filesAddressBar{
+    background-color: rgba(0, 0, 0, 0.079);
+    width: 100%;
+    height: 60px;
+}
+.filesAddressBarInner{
+    width: calc(100% - 30px);
+    margin-left: 15px;
+    height: 30px;
+    margin-top: 15;
+    border: none;
+    padding: 10px;
+}
+.filesFoldersArea{
+    overflow: hidden;
+    overflow-y: scroll;
+    height: calc(100% - 90px);
+}
+.fileFolder{
+    color: rgb(59, 59, 59);
+    transition: 0.5s;
+    padding: 10px;
+}
+.fileFolder:hover{
+    background-color: rgba(0, 0, 0, 0.137);
+}
+.thumbnailFiles{
+    color: rgb(59, 59, 59);
+    vertical-align: text-bottom;
+}
