--- a/SystemUI/SystemInterface/interface.css
+++ b/SystemUI/SystemInterface/interface.css
@@ -7,6 +7,7 @@
 	width: 100%;
 	height: 48px;
 	border-radius: 5px;
+	z-index: 99999999999999999;
 }
 
 .startButton {
@@ -32,6 +33,7 @@
 	background-color: rgba(255, 255, 255, 0.383);
 	opacity: 0;
 	border-radius: 5px;
+	z-index: 99999999999999999;
 }
 
 .menuStrip {
@@ -74,6 +76,7 @@
 	color: rgb(73, 73, 73);
 	border-bottom: solid rgba(65, 65, 65, 0.459) 0.030em;
 	line-height: 29px;
+	user-select: none;
 }
 .window{
 	position: absolute;
@@ -82,5 +85,6 @@
 	background-color: rgba(255, 255, 255, 0.335);
 	overflow: hidden;
 	border: solid rgba(65, 65, 65, 0.459) 1px;
+	user-select: none;
 
 }
