--- a/SystemUI/SystemInterface/files.css
+++ b/SystemUI/SystemInterface/files.css
@@ -1,4 +1,4 @@
-.leftContainer{
+.leftContainer {
     display: inline-block;
     width: 200px;
     margin-right: -4px;
@@ -8,64 +8,80 @@
     color: rgb(56, 56, 56);
 }
 
-.rightContainer{
+.rightContainer {
     display: inline-block;
     width: calc(100% - 200px);
     height: 100%;
     background-color: rgb(255, 255, 255);
     vertical-align: top;
 }
-.filesTitle{
+
+.filesTitle {
     text-align: center;
     line-height: 5px;
     font-size: 20px;
     border-bottom: solid rgba(65, 65, 65, 0.459) 1px;
 }
-.filesIcon{
+
+.filesIcon {
     display: block;
     margin-top: 20px;
     font-size: 50px;
 }
-.place{
+
+.place {
     transition: 0.5s;
-    height:50px; 
+    height: 50px;
     line-height: 3.5;
     padding-left: 20px;
 }
-.place:hover{
+
+.place:hover {
     background-color: rgba(0, 0, 0, 0.103)
 }
-.placesIcons{
+
+.placesIcons {
     vertical-align: text-top;
     padding-right: 5px;
 }
-.filesAddressBar{
-    background-color: rgba(0, 0, 0, 0.079);
+
+.filesAddressBar {
     width: 100%;
     height: 60px;
+    border-bottom: solid rgba(0, 0, 0, 0.2) 1px;
 }
-.filesAddressBarInner{
+
+.filesAddressBarInner {
     width: calc(100% - 30px);
     margin-left: 15px;
     height: 30px;
     margin-top: 15;
     border: none;
     padding: 10px;
+    background-color: rgba(0, 0, 0, 0.04);
 }
-.filesFoldersArea{
+
+.filesFoldersArea {
     overflow: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     height: calc(100% - 90px);
 }
-.fileFolder{
+
+.fileFolder {
     color: rgb(59, 59, 59);
     transition: 0.5s;
     padding: 10px;
 }
-.fileFolder:hover{
+
+.fileFolder:hover {
     background-color: rgba(0, 0, 0, 0.137);
 }
-.thumbnailFiles{
+
+.thumbnailFiles {
     color: rgb(59, 59, 59);
     vertical-align: text-bottom;
+}
+
+.selectedLeftBar {
+    background-color: rgba(0, 0, 0, 0.12)
 }
